[project]
name = "s2geometry"
description = "Computational geometry and spatial indexing on the sphere"
authors = [
    { name = "Dan Larkin-York", email = "dan@arangodb.com" },
    { name = "Eric Veach", email = "ericv@google.com" },
    { name = "Jesse Rosenstock", email = "jmr@google.com" },
    { name = "Julien Basch", email = "julienbasch@google.com" },
    { name = "Mike Playle", email = "mike@mythik.co.uk" },
    { name = "Phil Elson", email = "pelson.pub@gmail.com" },
    { name = "Robert Coup", email = "robert.coup@koordinates.com" },
    { name = "Tiago Brito", email = "tiago.brito@90poe.io" },
    { name = "Zachary Burnett", email = "zachary.r.burnett@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = [
    "version",
]

[project.license]
file = "LICENSE"
content-type = "text/plain"

[project.urls]
Source = "https://github.com/google/s2geometry"

[dependency-groups]
test = [
    "pytest",
]

[build-system]
requires = [
    "cmake_build_extension",
    "setuptools",
    "setuptools_scm[toml]",
    "swig",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
# The same as the default.  See #450.
# https://setuptools-scm.readthedocs.io/en/latest/config/#setuptools_scm._config.DEFAULT_TAG_REGEX
tag_regex = "^(?:[\\w-]+-)?(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"
 
[tool.cibuildwheel]
# we only need to build with CPython 3.10 (because of the limited API / stable ABI)
build = "cp310-*"
test-groups = ["test"]
test-requires = ["abi3audit"]
test-command = "pytest {project}/src/python/s2geometry_test.py && abi3audit --strict --report {project}/dist/*.whl"

[tool.cibuildwheel.macos]
# delocate is not needed because BUILD_SHARED_LIBS is OFF in setup.py,
# so all dependencies are statically linked into the extension module.
repair-wheel-command = ""
