[metadata]
name = pywraps2
version = 0.10.0
description = Python packaging of s2geometry
author = Brian Miles
author_email = selimnairb@gmail.com
license= MIT
project_urls =
    Source  = https://github.com/selimnairb/s2geometry
classifiers =

[options]
zip_safe = False
packages = find:
package_dir = =src
python_requres = >=3.7

[options.packages.find]
where = src
