[metadata]
name = s2geometry
version = 0.11.0.dev1
description = Python packaging of s2geometry
author = Brian Miles
author_email = selimnairb@gmail.com
license= Apache 2
project_urls =
    Source  = https://github.com/google/s2geometry
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir = =src
python_requres = >=3.7

[options.packages.find]
where = src
